Fix weekdays container background in dark mode

--- a/src/style/themes/custom.styl
+++ b/src/style/themes/custom.styl
@@ -193,6 +193,9 @@ span.flatpickr-weekday
 	.flatpickr-current-month .numInputWrapper .arrowDown:after
 		border-top-color #f9fafb
 	
+	.flatpickr-weekdays
+		background #111827
+	
 	span.flatpickr-weekday
 		background #111827
 		color #9ca3af
